fix(header): adjust header's z-index

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,6 +2,7 @@
   position: fixed;
   inset: 0 0 auto 0;
   height: var(--header-height);
+  z-index: 100;
 
   &_brand {
     height: 2rem;
