--- a/src/views/Home/home.module.scss
+++ b/src/views/Home/home.module.scss
@@ -8,7 +8,7 @@
   &_user {
     @media screen and (min-width: 768px) {
       position: sticky;
-      top: 1rem;
+      top: calc(#{var(--header-height)} + 1.5rem);
     }
   }
 }
